--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue JS</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://unpkg.com/vue@3"></script>
 
 </head>
 <body>
     <div id='content' class="container">
-        <h1>Hello Vue!</h1>
+        <h1>{{ pageTitle }}</h1>
         <p>Welcome to the wonderful world of Vue</p>
     </div>
     <script>
-        Vue.createApp().mount('#content')
+        Vue.createApp({
+            data() {
+                return{
+                    pageTitle: 'Hello Vue!'
+
+                };
+            }
+        }).mount('#content')
     </script>
 </body>
 </html>
