--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
-            <li v-for="link in links" class="nav-item active">
-                <a class="nav-link" v-bind:href="link.url"
+            <li v-for="(link, index) in links" class="nav-item active" :key="index">
+                <a class="nav-link"
+                :href="link.url"
+                :title="`This Link Goes To ${link.text}`"
                 >{{ link.text }}</a>
               </li>
             <!-- <li class="nav-item active">
@@ -44,26 +46,20 @@
 
 
     <script>
-        Vue.createApp({
-            data() {
-                return {
-                    links: [
-                        {text: "Home", url: 'home.html'},
-                        {text: "About", url: 'about.html'},
-                        {text: "Contact", url: 'contact.html'}
-                    ]
-                };
-            }
-        }).mount('nav')
 
         Vue.createApp({
             data() {
                 return{
+                    links: [
+                        {text: "Home", url: 'index.html'},
+                        {text: "About", url: 'about.html'},
+                        {text: "Contact", url: 'contact.html'}
+                    ],
                     pageTitle: 'Hello Vue!',
                     paragraph: 'Welcome to the wonderful world of Vue'
                 };
             }
-        }).mount('#content')
+        }).mount('body')
     </script>
 </body>
 </html>
