--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Vue Project</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li v-for="(page, index) in pages" class="nav-item active" :key="index">
-                <a class="nav-link"
+                <a class="nav-link "
+                :class="{ active: activePage == index }"
                 :href="page.link.url"
                 :title="`This Link Goes To ${page.text}`"
-                @click="activePage=index"
+                @click.prevent="activePage=index"
                 >{{ page.link.text }}</a>
               </li>
             <!-- <li class="nav-item active">
@@ -34,6 +35,12 @@
               <a class="nav-link" href="#">{{ links[2] }}g</a>
             </li> -->
           </ul>
+          <form action="" class="d-flex">
+            <button class="btn btn-primary"
+            @click.prevent="changeTheme"
+            >Toggle
+            </button>
+          </form>
         </div>
       </nav>
 
@@ -49,6 +56,7 @@
             data() {
                 return {
                     activePage: 0,
+                    theme: 'dark',
                     pages: [
                         {
                             link: {text: "Home", url: 'index.html'},
@@ -67,6 +75,11 @@
                         }
                     ],
                 };
+            },
+            methods: {
+                changeTheme() {
+                    this.theme = this.theme === 'light' ? 'dark' : 'light';
+                    }
             }
         }).mount('body')
     </script>
