--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav 
+        :class="[`navbar-${theme}`, `bg-${theme}`, 'navbar', 'navbar-expand-lg']">
         <a class="navbar-brand" href="#">Vue Project</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,9 +36,9 @@
               <a class="nav-link" href="#">{{ links[2] }}g</a>
             </li> -->
           </ul>
-          <form action="" class="d-flex">
+          <form class="d-flex">
             <button class="btn btn-primary"
-            @click.prevent="changeTheme"
+            @click.prevent="changeTheme()"
             >Toggle
             </button>
           </form>
