Update: Separate the script js part into its own file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vue JS</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://unpkg.com/vue@3"></script>
+    <script src="https://unpkg.com/vue@3.0.2"></script>
 
 </head>
 <body>
@@ -42,38 +42,7 @@
     </div>
 
 
-    <script>
-
-        Vue.createApp({
-            data() {
-                return {
-                    activePage: 0,
-                    theme: 'dark',
-                    pages: [
-                        {
-                            link: {text: "Home", url: 'index.html'},
-                            pageTitle: 'Home page!',
-                            paragraph: 'This is the Home page of Vue'
-                        },
-                        {
-                            link: {text: "About", url: 'about.html'},
-                            pageTitle: 'About page!',
-                            paragraph: 'This is the About Page of Vue'
-                        },
-                        {
-                            link: {text: "Contact", url: 'contact.html'},
-                            pageTitle: 'Contact page!',
-                            paragraph: 'This is the Contact Page'
-                        }
-                    ],
-                };
-            },
-            methods: {
-                changeTheme() {
-                    this.theme = this.theme === 'light' ? 'dark' : 'light';
-                    }
-            }
-        }).mount('body')
+    <script src="app.js">
     </script>
 </body>
 </html>
