Update: Separate the script js part into its own file

--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
         <p>{{ pages[activePage].paragraph }}</p>
     </div>
 
+    <div id="section2">
+        <!-- <h1>Hey there</h1> -->
+        <p>{{ heading }}</p>
+        <span>{{ author }}</span>
+    </div>
 
-    <script src="app.js">
-    </script>
+
+    <script src="app.js"></script>
 </body>
 </html>
