Update: Render github link via attribute binding of the anchor tag

--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
     <div class="box" @dblclick="handleEvent" >Double Click</div>
     <div class="box" @mousemove="handleMouseMove">Position - {{ x }} - {{ y }}</div>
 
-   
+   <div>
+    Created and deployed by
+    <a :href="url">
+        John Nganga
+    </a>
+   </div>
     <script src="app.js"></script>
 </body>
 </html>
