--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
         max-width: 960px;
         margin: 20px auto;
     }
-    .fav{
+    .fav h3{
         color: red;
     }
      .for-loop{
-        margin: 0;
+        margin: 50px;
         padding: 0;
+        align-items: center;
+        list-style-type: none;
+        
+        display: flex;
     }
     img{
         width:400px;
